Completed writing the tests, now for debugging